--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="http://www.github.com/parascoder1">
+            <a class="social-link rounded-circle text-white" href="http://www.github.com/paras-rastogi">
               <i class="icon-social-github"></i>
             </a>
           </li>
@@ -578,7 +578,7 @@
         </div>
         <div class="text-center">
 
-          <a class="btn btn-primary btn-lg rounded-pill" href="http://www.github.com/parascoder1/cryptocracker">
+          <a class="btn btn-primary btn-lg rounded-pill" href="http://www.github.com/paras-rastogi/cryptocracker">
             OPEN PROJECT
           </a>
 
@@ -613,7 +613,7 @@
           </div>
         </div>
         <div class="text-center">
-          <a class="btn btn-primary btn-lg rounded-pill" href="http://www.github.com/parascoder1/shrinkker">
+          <a class="btn btn-primary btn-lg rounded-pill" href="http://www.github.com/paras-rastogi/shrinkker">
             OPEN PROJECT
           </a>
 
@@ -655,7 +655,7 @@
         </div>
         <div class="text-center">
 
-          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/parascoder1/FusionIIIT">
+          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/paras-rastogi/FusionIIIT">
             OPEN PROJECT
           </a>
 
@@ -691,7 +691,7 @@
         </div>
         <div class="text-center">
 
-          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/parascoder1/Live-Captioning-and-Emotion-Recognizing-System">
+          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/paras-rastogi/Live-Captioning-and-Emotion-Recognizing-System">
             OPEN PROJECT
           </a>
 
@@ -730,7 +730,7 @@
         </div>
         <div class="text-center">
 
-          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/parascoder1/snippet">
+          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/paras-rastogi/snippet">
             OPEN PROJECT
           </a>
 
@@ -765,7 +765,7 @@
         </div>
         <div class="text-center">
 
-          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/parascoder1/e_mart">
+          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/paras-rastogi/e_mart">
             OPEN PROJECT
           </a>
 
@@ -800,7 +800,7 @@
           </div>
         </div>
         <div class="text-center">
-          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/parascoder1/chatHub">
+          <a class="btn btn-primary btn-lg rounded-pill" href="https://github.com/paras-rastogi/chatHub">
             OPEN PROJECT
           </a>
 
